# 247-data-collector

./: .gitignore  AGENTS.md  DEPLOY_TARGET.md  DEPLOY_TARGET_1080T.md  README.md  folder-structure.txt  pyproject.toml  user-systemd.md
app/: __init__.py  analysis.py  config.py  db.py  discovery.py  extract.py  fetch.py  routes.py  runtime.py  versioning.py
app/templates/: artifact_detail.html  base.html  document_detail.html  documents.html  run_detail.html  runs.html  source_detail.html  sources.html  version_detail.html
config/prompts/: summary_draft_v1.txt
config/sources/: demo_rss.xml  demo_sitemap.xml  demo_sources.toml  target_smoke_sources.toml  target_smoke_sources.toml.backup
scripts/: run_regression.py
systemd/: auto-scrapy-runtime.service  auto-scrapy-runtime.timer
systemd/backup/: auto-scrapy-runtime-fixed.timer  auto-scrapy-runtime-periodic.timer  auto-scrapy-runtime.service
tests/: test_analysis_smoke.py  test_db_smoke.py  test_discovery_smoke.py  test_extract_smoke.py  test_fetch_smoke.py  test_runtime_smoke.py  test_target_smoke_live_connectivity.py  test_ui_smoke.py  test_versioning_smoke.py
