[project]
name = "auto-scrapy"
version = "0.1.0"
description = "Local-first autonomous web knowledge harvester"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0,<4.0",
  "playwright>=1.52,<2.0",
  "scrapy>=2.11,<3.0",
  "scrapy-playwright>=0.0.35,<1.0",
  "trafilatura>=1.9,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
